extras/second-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: meow
  template:
    metadata:
      labels:
        app: meow
    spec:
      containers:
      - name: meow
        image: registry.services.k8s.true.nl/onboarding/nginx-static-demo:2.0
        ports:
        - containerPort: 8080
