extras/static-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-static-static
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: static.k8s.true.hosting
      http:
        paths:
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: nginx-static-demo
                port:
                  name: http
  tls:
    - hosts:
        - static.k8s.true.hosting
      secretName: static-k8s-true-hosting-tls
